[gd_scene load_steps=6 format=3 uid="uid://jx81a0d1ber4"]

[ext_resource type="Texture2D" uid="uid://xfnp2b6hb6u0" path="res://assets/bumpercar.png" id="1_jyvj5"]
[ext_resource type="Script" path="res://scripts/car.gd" id="1_tpy5k"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kbpmc"]
height = 208.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0jc28"]
radius = 25.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tahwl"]
lifetime_randomness = 0.28
particle_flag_disable_z = true
spread = 180.0
initial_velocity_max = 393.1
gravity = Vector3(0, 980, 0)

[node name="Car" type="RigidBody2D"]
lock_rotation = true
continuous_cd = 1
script = ExtResource("1_tpy5k")
speed = 5000.0

[node name="Bumpercar" type="Sprite2D" parent="."]
position = Vector2(107, -129)
texture = ExtResource("1_jyvj5")

[node name="bumper" type="CollisionShape2D" parent="."]
position = Vector2(105, -11)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_kbpmc")

[node name="hook" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hook"]
position = Vector2(7, -250)
shape = SubResource("CircleShape2D_0jc28")

[node name="EnergyBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = 61.0
offset_top = -135.0
offset_right = 172.0
offset_bottom = -108.0

[node name="Sparks" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
position = Vector2(9, -251)
amount = 40
process_material = SubResource("ParticleProcessMaterial_tahwl")
lifetime = 0.09
randomness = 1.0
trail_enabled = true
trail_lifetime = 0.14
trail_sections = 5

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -269)
position_smoothing_enabled = true

[node name="GroundRayCast2D" type="RayCast2D" parent="."]
position = Vector2(106, 0)
target_position = Vector2(0, 32)
hit_from_inside = true
collide_with_areas = true

[connection signal="body_shape_entered" from="hook" to="." method="_on_hook_body_shape_entered"]
[connection signal="body_shape_exited" from="hook" to="." method="_on_hook_body_shape_exited"]
